test: Expand integration tests for user validation and error handling
This commit significantly improves the backend's test coverage and the reliability of the test suite itself.

- Adds a new test suite for the User API endpoints ().
- Verifies that registering with a duplicate email correctly returns a 409 Conflict status.
- Verifies that registering with a password shorter than the minimum requirement returns a 400 Bad Request.
- Refactors the Zod validation middleware and schemas for a cleaner and more correct error response structure.
- Updates the test script with  to run tests sequentially, fixing race conditions between test files sharing the same database.
- Improves the reliability of the test environment by replacing  with a proper  in .

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "lint": "eslint . --ext .ts",
         "format": "prettier --write .",
         "check-types": "tsc --noEmit",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
     },
     "repository": {
         "type": "git",
