--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -8,13 +8,19 @@ services:
       - POSTGRES_DB=taskmanager_test
     ports:
       - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U myuser -d taskmanager_test"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   test-runner:
     build:
       context: .
       target: test
     depends_on:
-      - test-db
+      test-db:
+        condition: service_healthy
     environment:
       - DATABASE_URL=postgresql://myuser:mypassword@test-db:5432/taskmanager_test?schema=public
       - DATABASE_URL_TEST=postgresql://myuser:mypassword@test-db:5432/taskmanager_test?schema=public
@@ -29,8 +35,7 @@ services:
       - FRONTEND_URL=http://localhost:5173
     command: >
       sh -c "
-        echo 'Waiting for DB...' &&
-        sleep 5 &&
+        echo 'Waiting for DB to be healthy...' &&
         echo 'Running migrations...' &&
         npx prisma migrate deploy &&
         echo 'Running tests...' &&
